k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-markov
  labels:
    app: weather-markov
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: weather-markov
